--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,8 @@ body {
   font-family: 'Montserrat', sans-serif;
   margin: auto;
   margin-top: 0;
-  background: #CD5C5C;
-  color: #EEE;
+  background: #FEB6BC;
+  color: #555;
   font-size: 18px;
 }
 
@@ -11,12 +11,14 @@ header {
   height: 350px;
 }
 
+#portfolio, #contact {
+  background: #EEE;
+}
+
 #portfolio {
-  height: 480px;
+  height: 510px;
   text-align: center;
   padding-top: 10px;
-  background: #FFF8DC;
-  color: #F08080;
 }
 
 #portfolio img {
@@ -24,7 +26,7 @@ header {
 }
 
 #about {
-  height: 300px;
+  height: 360px;
   padding-top: 10px;
   text-align: center;
 }
@@ -34,9 +36,24 @@ header {
   text-align: center;
 }
 
+#projects {
+  height: 1000px;
+  margin-top: -80px;
+}
+
+#skills {
+  height: 460px;
+  margin-top: -100px;
+}
+
 .full-width {
   width: 1200px;
   margin: 0 auto;
+}
+
+#projects .full-width {
+  float: left;
+  margin-bottom: 20px;
 }
 
 .half-width {
@@ -52,20 +69,16 @@ header {
   float: left;
 }
 
-h2 {
-  font-family: 'Lora', serif;
-  font-size: 36px;
-}
-
-h3 {
-  font-family: 'Poppins', sans-serif;
-}
-
 header h1 {
   font-family: 'Averia Libre', serif;
   font-size: 24px;
-  color: #F08080;
+  color: #FE919C;
   padding: 10px 0 65px 25px;
+}
+
+h2 {
+  font-family: 'Lora', serif;
+  font-size: 36px;
 }
 
 header h2 {
@@ -74,8 +87,28 @@ header h2 {
   font-family: 'Lora', serif;
   font-size: 72px;
   line-height: 0px;
-  color: #FFF8DC;
+  color: #FD6372;
   padding: 20px 0 20px 25px;
+}
+
+header span {
+  color: #377EB5;
+}
+
+h3 {
+  font-family: 'Poppins', sans-serif;
+}
+
+h5 {
+  font-family: 'Lora', serif;
+  font-size: 21px;
+  font-weight: 100;
+  text-align: right;
+  padding-right: 30px;
+}
+
+#about h5 {
+  margin-top: 0px;
 }
 
 nav {
@@ -92,27 +125,27 @@ nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-size: 18px;
-  color: #FFF8DC;
   padding-left: 30px;
 }
 
-nav ul li a:hover {
-  color: #F08080;
-}
-
-footer {
-  background: #FFF8DC;
-  color: #F08080;
+a {
+  color: #C83745;
+  text-decoration: none;
 }
 
 footer a {
-  color: #CD5C5C;
   font-weight: bold;
-  text-decoration: none;
 }
 
-footer a:hover {
-  color: #F08080;
-  font-weight: bold;
-  text-decoration: none;
+a:hover {
+  color: #659AC3;
+}
+
+#about img {
+  width: 90%;
+}
+
+#projects img {
+  width: 80%;
+  padding-left: 20%;
 }
